fix hero overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,12 @@
   }
 }
 
+@media only screen and (max-width: 300px) {
+  .hero__title {
+    font-size: 3.2rem;
+  }
+}
+
 /*********about**************/
 .hero {
   height: 90vh;
@@ -213,12 +219,6 @@
   }
   .hero__paragraph {
     font-size: 2.3rem;
-  }
-}
-
-@media only screen and (max-width: 376px) {
-  .hero {
-    height: 60vh;
   }
 }
 
@@ -367,6 +367,7 @@
 @media only screen and (max-width: 768px) {
   .manage {
     justify-items: start;
+    max-width: 600px;
   }
   .manage__left {
     -webkit-box-ordinal-group: 3;
